# parcel-sort-intelligence

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manuscript.md  pyproject.toml
.github/workflows/: ci.yml
Label-Training-Certification/: index.html
Label-Training-Certification/css/: ups.css
Label-Training-Certification/js/: adaptive.js  analytics.js  app.js  config.js  quiz.js  storage.js  truth-data.js
Live-Sort/: README.md  tracker_northgate.html
Live-Sort/demo/: ngate_replay_bundle.js
Post-Sort/: outbound_performance.html  volume_analytics.html
Pre-Sort/presort-dashboard/: hii-dashboard-v3.0.html
data/zip-slic-atlas/: README.md  zip_slic_atlas.csv
synth-hub-generator/: README.md  emit_hub_corpus.py  emit_outbound_sample.py  emit_volume_analytics.py  emit_xlsx.py  fidelity_capsule.py
synth-hub-generator/audits/: ngate_fidelity_capsule_2026-07-09.json  ngate_fidelity_capsule_2026-07-09.md
synth-hub-generator/calibration/: build_calibration.py  calibration.json  calibration_report.md
synth-hub-generator/tests/: test_demo_replay_bundle.py  test_ltc_truth_synth.py  test_ngate_fidelity.py
synth-hub-generator/world/: hub_profile.northgate.json  ltc_truth_synth.py  roster.northgate.json  roster_synth.py  slic_synth.py  slic_table.northgate.json
